--- a/resources/css/house_info/list.css
+++ b/resources/css/house_info/list.css
@@ -92,7 +92,7 @@ body,html{
 .main .main_R{
 	width:auto;
 	height: 100%;
-	margin-left: 210px;
+	/*margin-left: 210px;*/
 	min-width: 800px;
 }
 .main .main_R .container{
