--- a/resources/detailAdmin/css/compiled/signin.css
+++ b/resources/detailAdmin/css/compiled/signin.css
@@ -9,7 +9,7 @@
 
 .login-wrapper {
   position: absolute;
-  top: 90px;
+  /*top: 90px;*/
   text-align: center; }
   .login-wrapper .logo {
     margin-bottom: 45px;
